--- a/Clinica/Properties/Resources.resx
+++ b/Clinica/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="IconPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\IconPerson.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconQuestion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\IconQuestion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IconTratamiento" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\IconTratamiento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
