--- a/Clinica/Properties/Resources.resx
+++ b/Clinica/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="Icon_Paciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Icon Paciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ManualDeUsuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\ManualDeUsuario.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Minimizar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Minimizar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
